# business-operations-snowflake-platform

./: .gitignore  .sqlfluff  README.md  dagster_cloud.yaml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
dbt/: Dockerfile  requirements.txt
dbt/warehouse/: .user.yml  profiles.yml
dbt/warehouse/macros/: safe_divide.sql
dbt/warehouse/models/: sources.yml
dbt/warehouse/models/marts/: dim_address.sql  dim_address.yml  dim_credit_card.sql  dim_credit_card.yml  dim_customer.sql  dim_customer.yml  dim_date.sql  dim_date.yml  dim_order_status.sql  dim_order_status.yml  dim_product.sql  dim_product.yml  fact_manufacture_order.sql  fact_manufacture_order.yml  fact_sale_order_detail.sql  fact_sale_order_detail.yml  forex_eur_usd.sql  forex_eur_usd.yml  obt_manufacture_order.sql  obt_sale_order_detail.sql  sentiment_daily.sql
dbt/warehouse/models/staging/: ops_address.sql  ops_address.yml  ops_address_history.sql  ops_address_history.yml  ops_country_region.sql  ops_country_region.yml  ops_credit_card.sql  ops_credit_card.yml  ops_customer.sql  ops_customer.yml  ops_person.sql  ops_person.yml  ops_product_category.sql  ops_product_category.yml  ops_product_history.sql  ops_product_history.yml  ops_product_subcategory.sql  ops_product_subcategory.yml  ops_purchasing_history.yml  ops_store.sql  (+21 more)
orchestration/: definitions.py
orchestration/assets/: airbyte.py  dbt.py
orchestration/tests/: test_dummy.py
terraform/: main.tf  terraform.tfvars  variables.tf
terraform/lambdas/retail_data/: retail_data.py
terraform/lambdas/sentiment/: sentiment.py
