[project]
name = "orchestration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "dagster>=1.13,<1.14",
    "dagster-cloud>=0.14.0,<0.15",
    "dagster-airbyte>=0.28,<0.29",
    "dagster-dbt>=0.29,<0.30",
    "dbt-core>=1.11,<1.12",
    "dbt-snowflake>=1.11,<1.12"
]



[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "orchestration.definitions"
code_location_name = "orchestration"

[tool.setuptools.packages.find]
exclude=["analytics_tests"]
